# stillspin

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
archive/obliquity-sweep/: config.yaml  physics.py  problem.py  sweep.py
archive/vplanet-obliquity/: README.md  run.py
chain-survey/: __init__.py  chain_generator.py  chain_types.py  orbital_evolution.py  perturbation_probe.py  spin_survey.py  survey_runner.py
chain-survey/tests/: conftest.py  test_chain_generator.py  test_chain_types.py  test_orbital_evolution.py  test_perturbation_probe.py  test_pipeline_flow.py  test_spin_survey.py
helios-atmosphere/: README.md  scenario.py
rebound-stability/: README.md  analyze.py  scenario.py
scripts/: analyze_episodes.py  fine_tune_system.py  generate_history.py  plot_chain_survey.py  plot_sensitivity_analysis.py  run_chain_survey.py  run_stage1_sweep.py  sensitivity_analysis.py  sweep_optimal_region.py  validate_optimal_system.py
shared/: analysis.py  constants.py  paths.py  plotting.py  result_store.py  scenarios.py  sweep_runner.py  sweep_types.py
tests/: test_sweep_infrastructure.py
thermal-sweep/: __init__.py  coarse_thermal_sweep.py  ebm.py  stellar_types.py  sweep.py
tidalpy-dissipation/: README.md  scenario.py
tlsr-spin/: PHYSICS.md  coarse_ptb_sweep.py  nbody.py  physics.py  plot_regime_schematic.py  plots.py  ptb_sweep.py  regime_classifier.py  spin_integrator.py  sweep.py  triax_resonance.py  validate.py
tlsr-spin/archive/: README.md  gr_corrections.py  kozai.py  period_analysis.py
tlsr-spin/tests/: conftest.py  test_integration.py  (+8 more)
